--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </main>
 
   <footer>
-    <p>🜂 Crafted in the dark <strong>From the Shadows</strong> — 2025 🜂</p>|
+    <p>🜂 Crafted in the dark <strong>From the Shadows</strong> — 2025 🜂</p><a href="unblocked/proxies.html" class="unblocked/proxies-btn">unblocked/proxies stuff</a>|
     <a href="help.html" class="help-btn">Help</a>
   </footer>
 
