--- a/help.html
+++ b/help.html
@@ -26,7 +26,7 @@
     <img src="https://ultimate-site-list.vercel.app/photos/homescreen.png" alt="homescreen" class="help-image">
   </a>
 
-  <h2>🖼 Adding Photos</h2>
+  <h2>🖼 How to use vidsrc</h2>
   <p>
     How to use vidsrc go to either IMDb or TMDB IMDb codes start with tt example:tt30274401 IMDB are jst numbers example:1228246
   </p>
