--- a/help.html
+++ b/help.html
@@ -54,6 +54,7 @@
   <p>🜂 Crafted in the dark <strong>From the Shadows</strong> — 2025 🜂</p>
   <a href="https://shadow-chat-a5f1.onrender.com/" class="helpchat-btn">Help Chat</a>
   <p>too small of a list? visit</p>  <a href="https://yarrlist.com/" class="yarrlist-btn">yarrlist</a>
+  <p>need a way bigger list? visit</p>  <a href="https://www.reddit.com/r/Piracy/wiki/megathread/" class="r/piracy-btn">r/piracy megathread</a>
 </footer>
 
 </body>
