--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <footer>
     <p>🜂 Crafted in the dark <strong>From the Shadows</strong> — 2025 🜂</p><a href="unblocked-proxies.html" class="unblocked/proxies-btn">unblocked/proxies stuff</a> |
-    <a href="help.html" class="help-btn">Help</a>
+    <a href="help.html" class="help-btn">Help</a> | <a href="other.html" class="other-btn">Other</a>
   </footer>
 
   <script src="script.js"></script>
