--- a/help.html
+++ b/help.html
@@ -20,18 +20,17 @@
   <p>
     Navigate through the categories on the homepage to explore movies, anime, manga, sports, torrents, and more.
   </p>
-  
-  <!-- Image 1 with working link -->
+
   <a href="https://ultimate-site-list.vercel.app/photos/homescreen.png" target="_blank" rel="noopener">
     <img src="https://ultimate-site-list.vercel.app/photos/homescreen.png" alt="homescreen" class="help-image">
   </a>
 
   <h2>🖼 How to use vidsrc</h2>
   <p>
-    How to use vidsrc go to either IMDb or TMDB IMDb codes start with tt example:tt30274401 IMDB are jst numbers example:1228246
+    To use vidsrc, visit either IMDb or TMDB. IMDb IDs start with <strong>tt</strong> (example: tt30274401).  
+    TMDB IDs are only numbers (example: 1228246).
   </p>
-    
-  <!-- Image 2 with working link -->
+
   <a href="https://ultimate-site-list.vercel.app/photos/vidsrc.png" target="_blank" rel="noopener">
     <img src="https://ultimate-site-list.vercel.app/photos/vidsrc.png" alt="vidsrc" class="help-image">
   </a>
@@ -50,11 +49,18 @@
   <a href="index.html" class="back-btn">⬅ Back to Home</a>
 </main>
 
-<footer>
+<footer class="help-footer">
   <p>🜂 Crafted in the dark <strong>From the Shadows</strong> — 2025 🜂</p>
-  <a href="https://shadow-chat-a5f1.onrender.com/" class="helpchat-btn">Help Chat</a>
-  <p>too small of a list? visit</p>  <a href="https://yarrlist.com/" class="yarrlist-btn">yarrlist</a>
-  <p>need a way bigger list? visit</p>  <a href="https://www.reddit.com/r/Piracy/wiki/megathread/" class="r/piracy-btn">r/piracy megathread</a>
+
+  <div class="footer-links">
+    <a href="https://shadow-chat-a5f1.onrender.com/" class="helpchat-btn">Help Chat</a>
+
+    <p>Too small of a list? Visit:</p>
+    <a href="https://yarrlist.com/" class="yarrlist-btn">YarrList</a>
+
+    <p>Need a way bigger list? Visit:</p>
+    <a href="https://www.reddit.com/r/Piracy/wiki/megathread/" class="r-piracy-btn">r/Piracy Megathread</a>
+  </div>
 </footer>
 
 </body>
