--- a/help.html
+++ b/help.html
@@ -50,18 +50,16 @@
 </main>
 
 <footer class="help-footer">
-  <p>🜂 Crafted in the dark <strong>From the Shadows</strong> — 2025 🜂</p>
 
-  <div class="footer-links">
-    <a href="https://shadow-chat-a5f1.onrender.com/" class="helpchat-btn">Help Chat</a>
+  <p class="footer-title">△ Crafted in the dark <strong>From the Shadows</strong> — 2025 △</p>
 
-    <p>Too small of a list? Visit:</p>
-    <a href="https://yarrlist.com/" class="yarrlist-btn">YarrList</a>
-
-    <p>Need a way bigger list? Visit:</p>
-    <a href="https://www.reddit.com/r/Piracy/wiki/megathread/" class="r-piracy-btn">r/Piracy Megathread</a>
+  <div class="footer-link-row">
+    <a href="https://shadow-chat-a5f1.onrender.com/" class="footer-btn">Help Chat</a>
+    <a href="https://yarrlist.com/" class="footer-btn">YarrList</a>
+    <a href="https://www.reddit.com/r/Piracy/wiki/megathread/" class="footer-btn">r/Piracy Megathread</a>
   </div>
-</footer>
 
+</footer>
+  
 </body>
 </html>
