--- a/help.html
+++ b/help.html
@@ -53,6 +53,7 @@
 
   <p class="footer-title">△ Crafted in the dark <strong>From the Shadows</strong> — 2025 △</p>
 
+  <p more sites and help chatp </p>
   <div class="footer-link-row">
     <a href="https://shadow-chat-a5f1.onrender.com/" class="footer-btn">Help Chat</a>
     <a href="https://yarrlist.com/" class="footer-btn">YarrList</a>
