--- a/help.html
+++ b/help.html
@@ -53,7 +53,8 @@
 
   <p class="footer-title">△ Crafted in the dark <strong>From the Shadows</strong> — 2025 △</p>
 
-  <p> more sites and help chat </p>
+  <p class="footer-sub">More sites & Help Chat</p>
+
   <div class="footer-link-row">
     <a href="https://shadow-chat-a5f1.onrender.com/" class="footer-btn">Help Chat</a>
     <a href="https://yarrlist.com/" class="footer-btn">YarrList</a>
