--- a/unblocked-proxies.html
+++ b/unblocked-proxies.html
@@ -22,8 +22,8 @@
       <pi>Preinstalled Steam releases, DRM-free and ready to play.</pi>
     </li>
     <li>
-      <a href="https://gog-games.to" target="_blank">GOG Games</a>
-      <pi>DRM-free releases from Good Old Games, perfect for collectors.</pi>
+      <a href="https://phantom.lol" target="_blank">shadowv3</a>
+      <pi>proxy browser</pi>
     </li>
   </ul>
 
@@ -34,8 +34,8 @@
       <pi>Proxy with games</pi>
     </li>
     <li>
-      <a href="https://ovagames.com" target="_blank">OvaGames</a>
-      <pi>Beautifully organized catalog for indie and AAA titles alike.</pi>
+      <a href="https://euphoria-unblockedv1.netlify.app" target="_blank">euphoria</a>
+      <pi>Lots of games.</pi>
     </li>
     <li>
       <a href="https://igg-games.com" target="_blank">IGG Games</a>
