--- a/unblocked-proxies.html
+++ b/unblocked-proxies.html
@@ -38,8 +38,8 @@
       <pi>Lots of games.</pi>
     </li>
     <li>
-      <a href="https://igg-games.com" target="_blank">IGG Games</a>
-      <pi>Massive archive of cracked games with simple installation guides.</pi>
+      <a href="https://demonlord-hitboy.vip" target="_blank">demonlord hitboy</a>
+      <pi>movies games anime etc.</pi>
     </li>
   </ul>
 
