--- a/unblocked-proxies.html
+++ b/unblocked-proxies.html
@@ -41,6 +41,18 @@
       <a href="https://demonlord-hitboy.vip" target="_blank">demonlord hitboy</a>
       <pi>movies games anime etc.</pi>
     </li>
+    <li>
+      <a href="https://3e3c.org" target="_blank">fern</a>
+      <pi>fern.</pi>
+    </li>
+    <li>
+      <a href="https://literacyadventures.com" target="_blank">fern</a>
+      <pi>fern backup.</pi>
+    </li>
+    <li>
+      <a href="https://waguri.answer168.com/" target="_blank">truffled</a>
+      <pi>my friend made this truffled.</pi>
+    </li>
   </ul>
 
   <pi><a href="index.html">⬅ Back to Home</a></pi>
