--- a/unblocked-proxies.html
+++ b/unblocked-proxies.html
@@ -25,6 +25,10 @@
       <a href="https://phantom.lol" target="_blank">shadowv3</a>
       <pi>proxy browser</pi>
     </li>
+    <li>
+      <a href="https://flipgrid.cfd/" target="_blank">flipgrid</a>
+      <pi>Has games and apps and stuff ig.</pi>
+    </li>
   </ul>
 
   <h3>💀 Hidden Gems</h3>
