--- a/unblocked-proxies.html
+++ b/unblocked-proxies.html
@@ -42,6 +42,10 @@
       <pi>Lots of games.</pi>
     </li>
     <li>
+      <a href="https://cleverr.net target="_blank">euphoria-hitboy</a>
+      <pi>Lots of games with proxy and ai.</pi>
+    </li>
+    <li>
       <a href="https://demonlord-hitboy.vip" target="_blank">demonlord hitboy</a>
       <pi>movies games anime etc.</pi>
     </li>
