--- a/unblocked-proxies.html
+++ b/unblocked-proxies.html
@@ -38,7 +38,7 @@
       <pi>Proxy with games</pi>
     </li>
     <li>
-      <a href="https://euphoria-unblockedv1.netlify.app" target="_blank">euphoria</a>
+      <a href="http://pfb.clocking.ro/" target="_blank">euphoria</a>
       <pi>Lots of games.</pi>
     </li>
     <li>
