Add link to allanime in anime.html

--- a/anime.html
+++ b/anime.html
@@ -65,6 +65,10 @@
       <a href="https://animesuge.bz/filter" target="_blank">animesuge</a>
       <pi>reliable few ads plus good filter system</pi>
     </li>
+    <li>
+      <a href="https://allmanga.to" target="_blank">allanime</a>
+      <pi>reliable few ads plus good filter system</pi>
+    </li>
   </ul>
 
   <pi><a href="index.html">⬅ Back to Home</a></pi>
