--- a/music.html
+++ b/music.html
@@ -41,9 +41,13 @@
       <a href="https://beatroot.com" target="_blank">BeatRoot</a>
       <pi>Hidden gem for finding remixes and AI-generated beats.</pi>
     </li>
+    <li>
+      <a href="https://navine-music.com" target="_blank">Navine Music</a>
+      <pi>Hidden gem for listening and downloading music.</pi>
+    </li>
   </ul>
 
   <pi><a href="index.html">⬅ Back to Home</a></pi>
-  <p>🜂 Crafted in the dark <strong>From the Shadows</strong> — 2025 🜂</p>
+  <p>🜂 Crafted in the dark <strong>From the Shadows</strong> — 2026 🜂</p>
 </body>
 </html>
